--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
 /Contactly/.vs/Contactly/CopilotIndices/0.2.1657.32929
 /Contactly/.vs/Contactly/CopilotIndices/0.2.1657.32929
+*.cache
+*.cache
+*.cache
+*.cache
