--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 *.cache
 *.cache
 Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
+Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
+/Contactly/Contactly/obj/Debug/net8.0
