--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
 Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
 /Contactly/Contactly/obj/Debug/net8.0
+*.cache
+Contactly/.vs/Contactly/FileContentIndex/450a0e79-e6c2-462e-8e77-481daab903ce.vsidx
+Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfo.cs
+Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
