--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
 /Contactly/.vs/Contactly/FileContentIndex
 *.cache
 *.v2
+/Contactly/.vs/Contactly/CopilotIndices
