--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
 *.cache
 *.v2
 /Contactly/.vs/Contactly/CopilotIndices
+/Contactly/.vs/Contactly/FileContentIndex
