--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
 *.v2
 /Contactly/.vs/Contactly/CopilotIndices
 /Contactly/.vs/Contactly/FileContentIndex
+*.cache
