--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@ Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
 /Contactly/.vs/Contactly/CopilotIndices
 /Contactly/.vs/Contactly/FileContentIndex
 *.cache
+/Contactly/.vs/Contactly/config
+/Contactly/.vs/Contactly/v17
+/Contactly/.vs/Contactly/v17
+/Contactly/Contactly/bin/Debug/net8.0
+/Contactly/.vs/Contactly/v17
+/Contactly/.vs/Contactly/v17
+/Contactly/Contactly/obj/Debug/net8.0
+*.cache
