--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
 /Contactly/.vs/Contactly/v17
 /Contactly/Contactly/obj/Debug/net8.0
 *.cache
+/Contactly/.vs/Contactly/CopilotIndices/0.2.1657.32929
+/Contactly/.vs/Contactly/DesignTimeBuild
