--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
 *.cache
 /Contactly/.vs/Contactly/CopilotIndices/0.2.1657.32929
 /Contactly/.vs/Contactly/DesignTimeBuild
+Contactly/.vs/Contactly/CopilotIndices/0.2.1657.32929/SemanticSymbols.db-wal
