--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ Contactly/Contactly/obj/Debug/net8.0/Contactly.AssemblyInfoInputs.cache
 /Contactly/.vs/Contactly/CopilotIndices/0.2.1657.32929
 /Contactly/.vs/Contactly/DesignTimeBuild
 Contactly/.vs/Contactly/CopilotIndices/0.2.1657.32929/SemanticSymbols.db-wal
+/Contactly/.vs/Contactly/CopilotIndices
+/Contactly/.vs/Contactly/CopilotIndices
